modif du contraste des button fermer suivant et prevent IMAGES

--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ a[data-lightbox]:hover img {
 .lightbox-caption {
     padding: 20px;
     color: #FFF;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 1);
     position: absolute;
     left: 15px;
     right: 15px;
@@ -649,7 +649,7 @@ a[data-lightbox]:hover img {
     border: none;
     line-height: 30px;
     padding: 0 9px 5px;
-    opacity: 0.3;
+    opacity: 1;
 }
 
 .close-lightbox:hover,
@@ -662,14 +662,17 @@ a[data-lightbox]:hover img {
 .next-lightbox,
 .prev-lightbox {
     font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
+    color: rgba(255, 255, 255, 1);
+    background: rgba(0, 0, 0, 1);
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
     z-index: 1;
     opacity: 0.4;
 }
+
+
+
 
 .next-lightbox {
     padding: 6px 8px 1px 13px;
